# bwi_speech

./: .gitmodules  README.md
bwi_speech_services/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
bwi_speech_services/data/: arm_lex.txt  arm_parser.pckl  arm_templates.txt  parser_train.txt  train_log.txt
bwi_speech_services/scripts/: sound_transcript_server.py  sound_transcript_server.py~  sound_transcript_test_client.py  sound_transcript_test_client.py~  speech_pipeline.py  test_parser.py
bwi_speech_services/scripts/deprecated/: gen_arm_corpus.py  train_parser.py
bwi_speech_services/srv/: RequestSoundTranscript.srv  RequestSoundTranscript.srv~
grounded_dialogue_agent_ros/: CMakeLists.txt  package.xml  readme.md
grounded_dialogue_agent_ros/action/: ConductDialogue.action
grounded_dialogue_agent_ros/scripts/: conduct_dialogue_as  dialogue_provider
scripts/: justin.py~  speech_pipeline.py  speech_pipeline.py~  transcribe_streaming.py
src/: arm_lex.txt  arm_ont.txt  arm_parser.pckl  arm_templates.txt  err.txt  gen_arm_corpus.py  open_gripper_templates.txt  out.txt  parser_train.txt  speech_pipeline.py  speech_pipeline.py~  train_parser.py  utterances.txt
